lib/stratiform/res/test/stratiform/corpus/pos/literal-atom-resumes-after-close.tel
code
      EOF
content
EOF
sibling
