lib/stratiform/res/test/stratiform/corpus/neg/e113-source-after-literal.tel
code
      EOF
literal content
EOF
    source content
